# ProiectSPG

./: CMakeLists.txt  README.md
shaders/: shader.fs  shader.vs
src/: Shader.cpp  glad.c  main.cpp
